Fix, updates
1) Fixed Character Ability table not showing correcly (panoramica.php)
2) Removed Skolar Font.
3) Removed bootstrap-theme.min
4) Updated Bootstrap from 3.1.1 to 3.3.6
5) Updated Glyphicons
6) Added new plugin bootstrap-select in abilita_pg.php (better UX for
Masters)

--- a/css/comune.css
+++ b/css/comune.css
@@ -1,16 +1,9 @@
 /*
  * CSS Comune a tutte le pagine
  */
-@import url("../bootstrap/css/bootstrap-theme.min.css");
-@font-face {
-    font-family: 'Skolar'; /* nome del font */
-    src: url(SkolarCyrillic_Regular.otf); /*url al font da utilizzare*/
-    src: local('Skolar'), url('SkolarCyrillic_Regular.otf') format('truetype');
-}
 html,
 body {
     height: 100%;
-    font-family: Skolar;
 }
 #wrap {
     min-height: 100%;
